CHANGES.txt - 11/17/2000
------------------------

CHANGES IN CUPS V1.1.5

	- Security updates - new default configuration does
	  not broadcast printer information and only allows
	  access from the local system.
	- Documentation updates.
	- Makefile/configure script updates.
	- The RPM spec file didn't work out-of-the-box under
	  RedHat or Mandrake.
	- Minor code cleanup to remove extraneous compiler
	  warnings.
	- cupsTempFile() was using %p for the temporary
	  filename; this should have been %08x (just 8 digit
	  hex)
	- Deleting a printer with active print jobs would still
	  crash the server.
	- ippWrite() and ipp_write_file() didn't send the
	  correct value length for name-with-language and
	  text-with-language attributes.
	- Updated IPP code to support copied strings (that
	  should not be freed); this provides slightly more
	  efficient IPP server performance.
	- Updated PDF filter to Xpdf 0.91.
	- httpGets() could go into an infinite loop if a line
	  longer than the input buffer size was sent by a
	  client. This could be used in a Denial-of-Service
	  attack.
	- The lpstat and CUPS API functions now request only the
	  data required when getting the list of printer or
	  class information.  This should improve performance
	  with large numbers of printers on slower machines.
	- The scheduler was always enforcing the FilterLimit,
	  even if FilterLimit was set to 0.
	- Updated the Linux USB backend to support Mandrake's
	  /dev/usb/usblp# filenames.
	- The PRINTER and LPDEST environment variables did not
	  override the lpoptions default printer.
	- The PPD read functions incorrectly included trailing
	  characters (usually whitespace) after quoted string
	  attributes.
	- The multiple-document-handling attribute handling code
	  did not check for the correct value for collated
	  copies (separate-documents-uncollated-copies).
	- The EPSON driver did not work with OKIDATA printers in
	  EPSON emulation mode (needed change-emulation command)